--- a/main.html
+++ b/main.html
@@ -8,6 +8,83 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>HTML Assignment 3</h1>
+	<table id="table-1">
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13" class="right">right</td>
+		</tr>
+		<tr class="center">
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
+		</tr>
+	</table>
+	<table id="table-2">
+		<tr>
+			<td colspan="6" id="t21"></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+	</table>
+	<table id="table-3">
+		<tr class="green">
+			<td colspan="6"></td>
+		</tr>
+		<tr>
+			<td colspan="2"></td>
+			<td id="t-image">
+				<img src="https://images.unsplash.com/photo-1748096089012-e601d766815f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw2MHx8fGVufDB8fHx8fA%3D%3D" alt="img">
+			</td>
+			<td colspan="2"></td>
+		</tr>
+		<tr class="blue">
+			<td colspan="6"></td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
