--- a/main.html
+++ b/main.html
@@ -8,40 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>HTML Assignment 3</h1>
-	<table id="table-1">
+	<h1>HTML Assignment #3</h1>
+	<table id="table-1" class="middle">
 		<tr>
-			<td id="t11">left</td>
-			<td id="t12">center</td>
+			<td id="t11" class="left">left</td>
+			<td id="t12" class="center">center</td>
 			<td id="t13" class="right">right</td>
 		</tr>
-		<tr class="center">
-			<td>left</td>
-			<td>center</td>
+		<tr>
+			<td class="left">left</td>
+			<td class="center">center</td>
 			<td class="right">right</td>
 		</tr>
 		<tr>
-			<td>left</td>
-			<td>center</td>
+			<td class="left">left</td>
+			<td class="center">center</td>
 			<td class="right">right</td>
 		</tr>
 	</table>
-	<table id="table-2">
+	<!-- table-2  -->
+	<table id="table-2" class="middle">
 		<tr>
 			<td colspan="6" id="t21"></td>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td></td>
+			<td rowspan="4"></td>
 			<td></td>
 			<td></td>
 			<td></td>
@@ -50,16 +41,14 @@
 		</tr>
 		<tr>
 			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td colspan="3" rowspan="2"></td>
 			<td></td>
 		</tr>
 		<tr>
 			<td></td>
 			<td></td>
+		</tr>
+		<tr>
 			<td></td>
 			<td></td>
 			<td></td>
@@ -70,16 +59,15 @@
 			<td colspan="6"></td>
 		</tr>
 	</table>
-	<table id="table-3">
+	<!-- table-3  -->
+	<table id="table-3" class="middle">
 		<tr class="green">
 			<td colspan="6"></td>
 		</tr>
-		<tr>
-			<td colspan="2"></td>
-			<td id="t-image">
-				<img src="https://images.unsplash.com/photo-1748096089012-e601d766815f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw2MHx8fGVufDB8fHx8fA%3D%3D" alt="img">
+		<tr align="center">
+			<td id="t-image" >
+				<img width="50%" src="https://images.unsplash.com/photo-1748096089012-e601d766815f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw2MHx8fGVufDB8fHx8fA%3D%3D" alt="img">
 			</td>
-			<td colspan="2"></td>
 		</tr>
 		<tr class="blue">
 			<td colspan="6"></td>
