--- a/main.html
+++ b/main.html
@@ -60,17 +60,17 @@
 		</tr>
 	</table>
 	<!-- table-3  -->
-	<table id="table-3" class="middle">
-		<tr class="green">
-			<td colspan="6"></td>
+	<table id="table-3" class="middle" width="100%">
+		<tr>
+			<td colspan="6" class="green"></td>
 		</tr>
 		<tr align="center">
 			<td id="t-image" >
 				<img width="50%" src="https://images.unsplash.com/photo-1748096089012-e601d766815f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw2MHx8fGVufDB8fHx8fA%3D%3D" alt="img">
 			</td>
 		</tr>
-		<tr class="blue">
-			<td colspan="6"></td>
+		<tr>
+			<td colspan="6" class="blue"></td>
 		</tr>
 	</table>
     <script type="text/javascript" src="./script.js">
